Fixed background image opacity to align with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,12 +145,20 @@ header {
 }
 
 .upcoming-events-section {
-    background-image: url(/assets/images/amalia-laying.png);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
     height: 700px;
-    overflow: hidden;
+    z-index: 1;
+    position: relative;
+}
+
+.events-background {
+    background-image: url(/assets/images/amalia-laying.png);
+    position: absolute;
+    z-index: -1;
+    opacity: .6;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .upcoming-events-section h2 {
@@ -159,7 +167,7 @@ header {
     font-size: 250%;
     text-transform: uppercase;
     text-align: center;
-    margin-top: 8px;
+    padding-top: 20px;
 }
 
 #underline-events-title {
